Include Quarkus in rest of project